Closed Bug 1714533 Opened 3 years ago Closed 1 year ago

ServiceWorkerContainer should not have an onerror event handler attribute

Categories

(Core :: DOM: Service Workers, defect, P3)

defect

Tracking

()

RESOLVED FIXED
106 Branch
Tracking Status
firefox106 --- fixed

People

(Reporter: foolip, Assigned: jmarshall)

Details

(Keywords: good-first-bug)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36

Steps to reproduce:

https://mdn-bcd-collector.appspot.com/tests/api/ServiceWorkerContainer/onerror

Actual results:

Firefox supports this event handler attribute, and it's in here in your Web IDL:
https://github.com/mozilla/gecko-dev/blob/bf8d5de8528036c09590009720bc172882845b80/dom/webidl/ServiceWorkerContainer.webidl#L35

Expected results:

It shouldn't be supported, it's not in the spec or any other browser:
https://w3c.github.io/ServiceWorker/#serviceworkercontainer-interface

The Bugbug bot thinks this bug should belong to the 'Core::DOM: Events' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → DOM: Events
Product: Firefox → Core
Component: DOM: Events → DOM: Service Workers

This seems to date back to the original WebIDL landing in bug 930348 per searchfox blame on the line and the patch that landed on that bug.

Severity: -- → S3
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P3
Assignee: nobody → jmarshall
Pushed by bugmail@asutherland.org:
https://hg.mozilla.org/integration/autoland/rev/10c0d6ed6ad9
Remove onerror event handler from ServiceWorkerContainer r=dom-worker-reviewers,smaug
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch
You need to log in before you can comment on or make changes to this bug.