Bug 1714533 - Remove onerror event handler from ServiceWorkerContainer r=dom-worker-reviewers,smaug

Differential Revision: https://phabricator.services.mozilla.com/D156499