dom/webidl/ServiceWorkerContainer.webidl
@@ -32,7 +32,6 @@ interface ServiceWorkerContainer : EventTarget {
   void startMessages();
 
   attribute EventHandler oncontrollerchange;
-  attribute EventHandler onerror;
   attribute EventHandler onmessage;
   attribute EventHandler onmessageerror;
 };
